Fixed button alignment issues and mobile section padding

--- a/css/main.css
+++ b/css/main.css
@@ -1129,7 +1129,7 @@ Quick Modal v1.03 Plugin (by Kevin Beronilla; edited for Salesforce1)
     font-family: "ProximaNovaSoft", Calibri, "Gill Sans", "Gill Sans MT", Candara, Segoe, "Segoe UI", Arial, sans-serif;
     font-size: 15px;
     line-height: 20px;
-    padding: 10px 12px 12px;
+    padding: 11px 12px;
     margin-right: 16px;
     border-radius: 5px;
     border: 1px solid transparent;
