--- a/scss/salesforce1/_interactive.scss
+++ b/scss/salesforce1/_interactive.scss
@@ -6,7 +6,7 @@ button {
     font-family: $font-stack;
     font-size: $font-size;
     line-height: $line-height;
-    padding: 10px 12px 12px;
+    padding: 11px 12px;
     margin-right: $type-spacing;
     border-radius: $round-corner-small;
     border: 1px solid transparent;
